# llmstart-howework

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  railway.json  railway.toml
.cursor/rules/: conventions.mdc  workflow.mdc
bot/: __init__.py  handlers.py
doc/: conventions.md  deployment.md  product_idea.md  progress.md  prompts.md  railway-debug.md  railway-deployment.md  tasklist.md  vision.md  workflow.md
doc/guides/: botfather_guide.md
llm/: __init__.py  client.py  logging_utils.py  memory.py  prompts.py  services.py
test/: test_config.py  test_integration.py  test_llm.py  test_memory.py
