[project]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "llm"]
include = [
    "main.py",
    "config.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"] 